--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/react": "^15.0.5",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/prettier": "2.7.3",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.12.7",
 		"@types/react": "^18.3.1",
